--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Wall</string>
     <string name="search_wallpapers">Search wallpapers</string>
     <string name="search">Search</string>
+    <string name="tags">tags</string>
 </resources>
