--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search_wallpapers">Search wallpapers</string>
     <string name="search">Search</string>
     <string name="tags">tags</string>
+    <string name="wallpaperapp">WallpaperApp</string>
 </resources>
