--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="search">Search</string>
     <string name="tags">tags</string>
     <string name="wallpaperapp">WallpaperApp</string>
+    <string name="loading">loading</string>
+
 </resources>
